BUG#33801 ndb_restore fails when not all tables are restored once