storage/ndb/tools/restore/restore_main.cpp
@@ -893,7 +893,8 @@ main(int argc, char** argv)
     {
       if (!ga_skip_table_check){
         for(i=0; i < metaData.getNoOfTables(); i++){
-          if (checkSysTable(metaData, i))
+          if (checkSysTable(metaData, i) && 
+             checkDbAndTableName(metaData[i]))
           {
             for(Uint32 j= 0; j < g_consumers.size(); j++)
               if (!g_consumers[j]->table_equal(* metaData[i]))
